# PBTune

./: .dockerignore  .env.example  .gitignore  .graphifyignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.tuner  LICENSE  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  categories.txt  cliff.toml  docker-compose.yml  docker-entrypoint.sh  environment.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt  setup.sh  test-docker.yml  test_restore.py  test_snapshot_contents.py
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
data/: data_driven_tiers.json  knob_metadata.json  knob_policy.json
designs/: AI Analytics Dashboard.html
docker/: build_dbgen.sh  eval.Dockerfile  run_power_test.sh
docs/: ALGORITHM_COMPARISON.md  AUTOTUNING_KNOB_POLICY.md  BAYESIAN_OPTIMIZATION_BASELINE.md  BENCHMARKING.md  BO_BASELINE.md  COMPETITIVE_ANALYSIS.md  CONFIGURATION_MANAGEMENT.md  CROSS_WORKLOAD_TRANSFER.md  ENVIRONMENT_BACKENDS.md  ENVIRONMENT_SETUP.md  EVALUATION_RUNBOOK.md  EVALUATION_SUITE.md  FEATURE_DRIVEN_SCORING.md  GENERATION_BARRIERS.md  HARDWARE_AWARE_NORMALIZATION.md  KNOB_IMPORTANCE_ANALYSIS.md  METRICS_VALIDATION.md  MYSQL_INTEGRATION.md  PBT_CORE_COMPONENTS.md  PBT_VS_BO_COMPARISON.md  PERFORMANCE_EVALUATION.md  POPULATION_IMPLEMENTATION.md  POSTGRESQL_CONNECTION_AND_KNOBS.md  README.md  RUNNING_BO.md  VISUALIZATION.md  WORKLOAD_ORCHESTRATOR.md  index.md
graphify-out/: .graphify_labels.json  .graphify_manifest.json  GRAPH_REPORT.md  graph.html  graph.json
notebooks/: notebook_setup.py
results/: .gitignore  README.md  best_config.json  intermediate_gen14.json  intermediate_gen19.json  intermediate_gen24.json  intermediate_gen4.json  intermediate_gen9.json  pbt_results_20251201_131534.json  pbt_results_20251202_014559.json  pbt_results_20251203_193902.json  pbt_results_20251205_124507.json  pbt_results_20251205_131200.json  pbt_results_20251206_212853.json  (+2 more)
(+709 files in other folders)
