[project]
name = "pbtune"
version = "1.0.0"
description = "Evolutionary auto-tuning for PostgreSQL using Population-Based Training"
requires-python = ">=3.11"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
  {name = "Ibrahim Al-Shawa", email = "contact.alshaw.ai@gmail.com"},
  {name = "AbdelRahman Hedia"},
  {name = "Mahmoud Darwish"},
]
keywords = ["postgresql", "database-tuning", "population-based-training", "evolutionary-optimization"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/alshawai/PBTune"
Documentation = "https://alshawai.github.io/PBTune/"
Repository = "https://github.com/alshawai/PBTune"
Issues = "https://github.com/alshawai/PBTune/issues"
Changelog = "https://github.com/alshawai/PBTune/blob/main/CHANGELOG.md"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
  "src/benchmarks/tpch/tpch-dbgen",
]

[tool.ruff.lint]
# Start with high-signal correctness checks only.
select = ["E9", "F63", "F7", "F82"]
extend-select = ["F401", "F841", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Legacy modules are onboarded incrementally for import ordering and pyupgrade rules.
"src/**/*.py" = ["I001", "UP"]
"tests/**/*.py" = ["I001", "UP"]
"scripts/**/*.py" = ["I001"]

[tool.mypy]
python_version = "3.11"
pretty = true
show_error_codes = true
ignore_missing_imports = true
follow_imports = "skip"
warn_unused_ignores = false
warn_redundant_casts = false
exclude = ["src/benchmarks/tpch/tpch-dbgen"]
files = ["src", "scripts"]

[[tool.mypy.overrides]]
module = ["docker", "docker.*", "psycopg2", "psycopg2.*", "psutil"]
ignore_missing_imports = true
